--- a/api/build.gradle
+++ b/api/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
     implementation project(':db')
 
 }
