--- a/api/build.gradle
+++ b/api/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
     implementation project(':db')
+    implementation project(':common')
 
 }
 
