fix: order amount 계산 수정

--- a/rabbitmq/docker-compose.yaml
+++ b/rabbitmq/docker-compose.yaml
@@ -6,5 +6,5 @@ services:
       - "5672:5672"
       - "15672:15672"
     environment:
-      - RABBITMQ_DEFAULT_USER=
-      - RABBITMQ_DEFAULT_PASS=
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=admin123!
