--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,42 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
     id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
+
 allprojects {
     repositories {
         mavenCentral()
     }
+}
+
+subprojects {
+    apply {
+        plugin'java'
+        plugin 'org.springframework.boot'
+        plugin 'io.spring.dependency-management'
+    }
+    java {
+        sourceCompatibility = '17'
+    }
+
+    group = 'org.delivery'
+    version = '1.0-SNAPSHOT'
+
+    configurations {
+        compileOnly {
+            extendsFrom annotationProcessor
+        }
+    }
+
+
+    dependencies {
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+    }
+
+    test {
+        useJUnitPlatform()
+    }
+
 }
 
 bootJar {
