--- a/store-admin/build.gradle
+++ b/store-admin/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
+
     implementation 'org.springframework.boot:spring-boot-devtools'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
